style.css
html{
  background-image: url("city.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  background-size: cover;
  background-color: #254A00;
  max-width: 100%;
  max-height: 100%;
}
.center{
  position: absolute;
  margin: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 750px;
  height: 200px;
}

h1 {
  color: white;
  font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
  letter-spacing: 2px;
}
h3{
  font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
  font-size: 20px;
}


p{
  font-family: 'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
  font-size: 14px;
  
}
section {
  color: white;
  text-align: center;
  margin: 1.5%;
  width: 63%;
}

aside {
  top: 50px;
  margin: 0 1.5%;
  width: 30%;
}

